Fixed button overlapping over quote

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,23 @@ body {
   font-family: 'Playfair Display', serif;
 }
 #quote-box {
-  position: absolute;
+  position: relative;
   top: 20%;
   left: 10%;
   right: 10%;
   width: 80%;
   line-height: .5;
+}
+.button-box {
+  position: relative;
+  top: 20%;
+  left: 50%;
+
+}
+.container {
+  position: absolute;
+  top: 20%;
+    left: 20%;
 }
 .quote {
   font-size: 4rem;
@@ -62,14 +73,8 @@ body {
 }
 
 
-
 #loadQuote {
-  position: fixed;
   width: 12em;
-  display: inline-block;
-  left: 50%;
-  margin-left: -6em;
-  bottom: 150px;
   border-radius: 4px;
   border: 2px solid #fff;
   color: #fff;
